- get rid of some mandriva hardcodes - place scripts in the right place

--- a/openldap-dit-access-template.conf
+++ b/openldap-dit-access-template.conf
@@ -1,4 +1,4 @@
-# mandriva-dit-access.conf
+# openldap-dit-access.conf
 
 limits group="cn=LDAP Replicators,ou=System Groups,@SUFFIX@"
 	limit size=unlimited
