- added a bunch of schema files. Eventually these should be placed in   a separate package and we would then just require it as a dependency - added more configuration differences treatment between Mandriva and   Ubuntu/Debian - don't setup SSL for now, as the Debian/Ubuntu doesn't create a self   signed certificate upon the OpenLDAP server package installation - load bdb backend in Debian/Ubuntu. This may crash in Mandriva, because   there that backend is builtin

--- a/openldap-dit-slapd-template.conf
+++ b/openldap-dit-slapd-template.conf
@@ -1,41 +1,40 @@
 # slapd.conf template
-include	/usr/share/openldap/schema/core.schema
-include	/usr/share/openldap/schema/cosine.schema
-include	/usr/share/openldap/schema/corba.schema 
-include	/usr/share/openldap/schema/inetorgperson.schema
-include	/usr/share/openldap/schema/java.schema 
-include	/usr/share/openldap/schema/krb5-kdc.schema
-include /usr/share/openldap/schema/kerberosobject.schema
-include	/usr/share/openldap/schema/misc.schema
-include	/usr/share/openldap/schema/nis.schema
-include	/usr/share/openldap/schema/openldap.schema 
-include /usr/share/openldap/schema/autofs.schema
-include /usr/share/openldap/schema/samba.schema
-include /usr/share/openldap/schema/kolab.schema
-include /usr/share/openldap/schema/evolutionperson.schema
-include /usr/share/openldap/schema/calendar.schema
-include /usr/share/openldap/schema/sudo.schema
-include /usr/share/openldap/schema/dnszone.schema
-include /usr/share/openldap/schema/dhcp.schema
-include /usr/share/openldap/schema/dyngroup.schema
-include /usr/share/openldap/schema/ppolicy.schema
-include /usr/share/openldap/schema/kde.schema
+include	@SCHEMADIR@/core.schema
+include	@SCHEMADIR@/cosine.schema
+include	@SCHEMADIR@/corba.schema 
+include	@SCHEMADIR@/inetorgperson.schema
+include	@SCHEMADIR@/java.schema 
+include	@SCHEMADIR@/krb5-kdc.schema
+include @SCHEMADIR@/kerberosobject.schema
+include	@SCHEMADIR@/misc.schema
+include	@SCHEMADIR@/nis.schema
+include	@SCHEMADIR@/openldap.schema 
+include @SCHEMADIR@/autofs.schema
+include @SCHEMADIR@/samba.schema
+include @SCHEMADIR@/kolab.schema
+include @SCHEMADIR@/evolutionperson.schema
+include @SCHEMADIR@/calendar.schema
+include @SCHEMADIR@/sudo.schema
+include @SCHEMADIR@/dnszone.schema
+include @SCHEMADIR@/dhcp.schema
+include @SCHEMADIR@/dyngroup.schema
+include @SCHEMADIR@/ppolicy.schema
+include @SCHEMADIR@/kde.schema
 
-include	/etc/openldap/schema/local.schema
+pidfile		@RUNDIR@/slapd.pid
+argsfile	@RUNDIR@/slapd.args
 
-pidfile		/var/run/ldap/slapd.pid
-argsfile	/var/run/ldap/slapd.args
-
-modulepath	@LIBDIR@/openldap
+modulepath	@LDAPLIBDIR@
 moduleload	back_monitor.la
+moduleload  back_bdb.la
 moduleload	syncprov.la
 moduleload	ppolicy.la
 #moduleload	refint.la
 #moduleload	unique.la
 
-TLSCertificateFile      /etc/ssl/openldap/ldap.pem
-TLSCertificateKeyFile   /etc/ssl/openldap/ldap.pem
-TLSCACertificateFile    /etc/ssl/openldap/ldap.pem
+#TLSCertificateFile      /etc/ssl/openldap/ldap.pem
+#TLSCertificateKeyFile   /etc/ssl/openldap/ldap.pem
+#TLSCACertificateFile    /etc/ssl/openldap/ldap.pem
 
 #loglevel 256
 
@@ -92,7 +91,7 @@ authz-regexp "gidNumber=0\\\+uidNumber=0,cn=peercred,cn=external,cn=auth"
 	"uid=Account Admin,ou=System Accounts,@SUFFIX@"
 authz-regexp ^uid=([^,]+),cn=[^,]+,cn=auth$ uid=$1,ou=People,@SUFFIX@
 
-include /etc/openldap/openldap-dit-access.conf
+include @LDAPCONFDIR@/openldap-dit-access.conf
 
 database monitor
 access to dn.subtree="cn=Monitor"
