--- a/debian/control
+++ b/debian/control
@@ -6,8 +6,8 @@ Build-Depends: debhelper (>= 5)
 Standards-Version: 3.7.3
 
 Package: openldap-dit
-Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Architecture: all
+Depends: ${shlibs:Depends}, ${misc:Depends}, slapd, ldap-utils
 Description: Sample DIT for OpenLDAP
  This package contains a sample DIT for OpenLDAP which can be
  used together with many services and has a group based access
