Adjust ACLs so Account Admins can't touch other System Accounts' passwords [f=306329]

--- a/openldap-dit-access-template.conf
+++ b/openldap-dit-access-template.conf
@@ -22,17 +22,22 @@ access to dn.subtree="@SUFFIX@"
 # shadowLastChange is here because it needs to be writable by the user because
 # of pam_ldap, which will update this attr whenever the password is changed.
 # And this is done with the user's credentials
-access to dn.subtree="@SUFFIX@"
+access to dn.subtree="ou=People,@SUFFIX@"
         attrs=shadowLastChange
         by self write
         by group.exact="cn=Account Admins,ou=System Groups,@SUFFIX@" write
         by * read
-access to dn.subtree="@SUFFIX@"
+access to dn.subtree="ou=People,@SUFFIX@"
 	attrs=userPassword
 	by group.exact="cn=Account Admins,ou=System Groups,@SUFFIX@" write
 	by self write
 	by anonymous auth
 	by * none
+access to dn.subtree="@SUFFIX@"
+        attrs=userPassword
+        by self write
+        by anonymous auth
+        by * none
 
 # kerberos key access
 # "by auth" just in case...
