Map root user (uid=0, gid=0) to the "LDAP Admin" account via SASL EXTERNAL, so local root can change the directory without a password when using ldapi://

--- a/openldap-dit-slapd-template.conf
+++ b/openldap-dit-slapd-template.conf
@@ -88,7 +88,7 @@ ppolicy_default "cn=default,ou=Password Policies,@SUFFIX@"
 #unique_attributes uidNumber,uid
 
 authz-regexp "gidNumber=0\\\+uidNumber=0,cn=peercred,cn=external,cn=auth"
-	"uid=Account Admin,ou=System Accounts,@SUFFIX@"
+	"uid=LDAP Admin,ou=System Accounts,@SUFFIX@"
 authz-regexp ^uid=([^,]+),cn=[^,]+,cn=auth$ uid=$1,ou=People,@SUFFIX@
 
 include @LDAPCONFDIR@/openldap-dit-access.conf
